--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ yarn-error.log*
 .env.*
 
 #Build generated
-dist/
-build/
+# dist/
+# build/
 
 ### SublimeText ###
 # cache files for sublime text
